--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
   <body>
     <section>
       <div class="container">
-        <video src="charlie.mp4" autoplay loop width="400" height="400"></video>
+        <video
+          src="assets/charlie.mp4"
+          autoplay
+          loop
+          muted
+          playsinline
+          preload="auto"
+          width="400"
+          height="400"
+        ></video>
         <h1>April Fool😂</h1>
       </div>
     </section>
